--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <start-class>com.spring.Application</start-class>
+        <start-class>Application</start-class>
         <java.version>1.8</java.version>
     </properties>
 
