--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,4 @@ db.password: mysql
 hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql: true
 hibernate.hbm2ddl.auto: update
-entitymanager.packagesToScan: com.spring.model
+entitymanager.packagesToScan: com.wearit.model
